<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.example.proyecto.ui.cliente.InicioFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.proyecto.ui.cliente.LugaresFragment"
        android:label="@string/title_sites"
        tools:layout="@layout/fragment_lugares" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.proyecto.ui.cliente.CartFragment"
        android:label="@string/title_car"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.proyecto.ui.cliente.UserFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_user"/>
</navigation>