<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/transparente"
        android:contentDescription="@string/back"
        android:onClick="retroceder"
        android:src="@drawable/ic_back"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblTitu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_titulo"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/txtNombres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_nombres"
                app:layout_constraintBottom_toTopOf="@+id/txtApellidos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblTitu" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_apellidos"
                app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombres" />

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_usuario"

                app:layout_constraintBottom_toTopOf="@+id/txtContrasenia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />

            <EditText
                android:id="@+id/txtContrasenia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/txt_contrasenia"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/dpFechaNacimineto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

            <DatePicker
                android:id="@+id/dpFechaNacimineto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/spRol"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtContrasenia" />

            <Spinner
                android:id="@+id/spRol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dpFechaNacimineto" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button"
                android:text="@string/register_button_text"
                android:textColor="@color/text_button_color"
                android:textSize="18sp"
                app:backgroundTint="@color/transparente"
                app:backgroundTintMode="screen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spRol" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
